src/test/deca/syntax/valid/created/parser/VariablesAndTypes/VariableDeclaration.deca
// Description:
//  Teste la déclaration de variables
{
    int a;
    int b = 10;
    float c = 0.6;
    a = b;
}